--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -14,7 +14,9 @@
 <% end %>
 
 <% if @pagy.page == 1 %>
-  <%= link_to 'Voeg bier toe', new_beer_path %>
-  <% end %>
+  <div class="flex flex-row-reverse">
+    <%= link_to 'Voeg bier toe', new_beer_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" %>
+  </div>
+<% end %>
 
 <%= render 'table' %>
