Fix citaten line width on homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-8">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="max-w-6xl mx-auto px-2">
     <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
       <%= render 'shared/user_info' %>
       <%= render 'shared/next_event' %>
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="relative md:my-4">
+  <div class="relative md:my-4 -mx-5 sm:-mx-6 md:-mx-6">
     <div class="absolute inset-0 flex items-center" aria-hidden="true">
       <div class="w-full border-t border-gray-300"></div>
     </div>
