--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -33,7 +33,7 @@
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="flex items-center">
                     <div class="flex-shrink-0 h-10 w-10">
-                      <%= gravatar_for user, class: "h-10 w-10 rounded-full", alt: "user.name" %>
+                      <%= gravatar_for user, class: "h-10 w-10 rounded-full", alt: user.name %>
                     </div>
                     <div class="ml-4">
                       <div class="text-sm font-medium text-gray-900"><%= user.name %></div>
