--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,18 @@
         <%= render 'layouts/nav' %>
 
         <% if content_for?(:title) %>
-          <header class="pt-4 pb-10">
-              <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <%= render 'shared/breadcrumbs' %>
-                <h1 class="text-3xl font-bold text-white">
-                  <%= yield :title %>
-                </h1>
-                <% if content_for?(:subtitle) %>
-                  <div class="mt-1 flex flex-col -mb-6 sm:flex-row sm:flex-wrap sm:mt-0 sm:space-x-6">
-                    <%= yield :subtitle %>
-                  </div>
-                <% end %>
+          <header class="py-10">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+              <h1 class="text-3xl font-bold text-white">
+                <%= yield :title %>
+              </h1>
+              <div class="flex">
+                <div class="flex-auto">
+                  <%= render 'shared/breadcrumbs' %>
+                </div>
+                <div class="flex-none"><%= yield :search %></div>
               </div>
+            </div>
           </header>
         <% end %>
       </div>
