--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <% if current_user.admin? %>
-  <div class="relative md:my-4">
+  <div class="relative md:my-4 -mx-5 sm:-mx-6 md:-mx-6 ">
     <div class="absolute inset-0 flex items-center" aria-hidden="true">
       <div class="w-full border-t border-gray-300"></div>
     </div>
