--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -2,6 +2,14 @@
   <%= @usergroup.name %>
 <% end %>
 
+<% if @usergroup.signal_url? %>
+  <% content_for :search do %>
+    <% link_to @usergroup.signal_url, class: "inline-flex items-center p-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" do %>
+      <%= image_tag 'signal.png', class: "h-5 w-5" %>
+    <% end %> %>
+  <% end %>
+<% end %>
+
 <% content_for :subtitle do %>
   <div class="mt-2 flex items-center text-sm text-gray-400">
     <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
