--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -2,25 +2,19 @@
   Groepen
 <% end %>
 
-<div class="bg-white shadow overflow-hidden sm:rounded-md">
-  <ul role="list" class="divide-y divide-gray-200">
-    <% @usergroups.each do |group| %>
-      <%= render 'usergroups/group', group: group %>
-    <% end %>
-  </ul>
-</div>
-
 <% if current_user.admin? %>
-  <div class="relative md:my-4 -mx-5 sm:-mx-6 md:-mx-6 ">
-    <div class="absolute inset-0 flex items-center" aria-hidden="true">
-      <div class="w-full border-t border-gray-300"></div>
-    </div>
-    <div class="relative flex justify-center">
-      <span class="px-2 bg-white text-md text-gray-600">
-        Nieuwe groep
-      </span>
+  <div class="flex flex-row-reverse">
+    <%= link_to 'Voeg groep toe', new_usergroup_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+  </div>
+  <div class="relative md:my-4 -mx-6">
+    <div class="absolute inset-0 flex items-center">
+      <div class="w-full border-t border-gray-200"></div>
     </div>
   </div>
-
-  <%= render 'usergroups/form' %>
 <% end %>
+
+<ul role="list" class="divide-y divide-gray-200 -mx-6 -mb-6">
+  <% @usergroups.each do |group| %>
+    <%= render 'usergroups/group', group: group %>
+  <% end %>
+</ul>
