--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -2,11 +2,11 @@
   <%= @usergroup.name %>
 <% end %>
 
-<% if @usergroup.signal_url? %>
+<% if @usergroup.signal_url.present? %>
   <% content_for :search do %>
-    <% link_to @usergroup.signal_url, class: "inline-flex items-center p-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" do %>
+    <% link_to @usergroup.signal_url, target: "_blank", class: "inline-flex items-center p-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" do %>
       <%= image_tag 'signal.png', class: "h-5 w-5" %>
-    <% end %> %>
+    <% end %>
   <% end %>
 <% end %>
 
