--- a/app/views/usergroups/_form.html.erb
+++ b/app/views/usergroups/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for @group, html: {class: 'space-y-2 space-y'} do |f| %>
-  <% if @group.errors.any? %>
+<%= form_for @usergroup, html: {class: 'space-y-2 space-y'} do |f| %>
+  <% if @usergroup.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@group.errors.count, 'error') %> prohibited this beer from being saved:</h2>
+      <h2><%= pluralize(@usergroup.errors.count, 'error') %> prohibited this beer from being saved:</h2>
 
       <ul>
-        <% @group.errors.full_messages.each do |msg| %>
+        <% @usergroup.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
