--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -136,4 +136,5 @@
 
 </div>
 
+<!-- Lelijk maar ff handig voor debuggen. Deze pagina moet nog helemaal herschreven worden dus is moeite nu niet waard om het er goed in te zetten. -->
 <%= @user.lid_since %>
