--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,8 +13,8 @@
 <div class="flex-grow w-full max-w-7md mx-auto lg:flex">
   <div class="flex-1 min-w-0 bg-white md:flex">
     <div
-      class="border-b border-gray-200 md:border-b-0 md:flex-shrink-0 md:w-64 md:border-r md:border-gray-200 bg-white">
-      <div class="h-full pl-4 pr-6 md:pl-0">
+      class="border-b border-gray-200 md:border-b-0 md:flex-shrink-0 md:w-64 md:-my-6 md:border-r md:border-gray-200 bg-white">
+      <div class="h-full pl-4 pr-6 md:py-6 md:pl-0">
         <div class="h-full relative" style="min-height: 12rem;">
           <div class="mt-6 grid grid-cols-3 gap-y-6 gap-x-4">
 
@@ -112,12 +112,14 @@
       <div class="h-full py-6 px-4 sm:px-6 lg:pl-8">
         <div class="relative h-full">
           <%= f.rich_text_area :description, class: 'form-control higher form-input', placeholder: 'Wat gaan we doen?' %>
+
+          <div class="flex justify-center mt-5">
+            <%= f.submit "Opslaan", class: "inline-flex items-center px-6 py-3 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="flex justify-center mt-5">
-  <%= f.submit "Opslaan", class: "inline-flex items-center px-6 py-3 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-</div>
+
 <% end %>
