--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,36 +10,47 @@
           <div class="border-b border-gray-200 mb-2 pb-2">
             <div class="flex items-center justify-between">
               <div class="flex">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
                 <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
                 <%= "tot #{@event.end_time.strftime('%d-%m-%Y %H:%M')}" if @event.end_time? %>
               </div>
               <div class="flex items-center justify-between">
                 <% if @event.public? %>
-                  <%= link_to @event.invitation_link, class: "mx-2", target: "_blank" do %>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    <%= link_to @event.invitation_link, class: "mx-2", target: "_blank" do %>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-blue-500"
+                      fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                   <% end %>
                 <% end %>
                 <%= link_to edit_event_path(@event), class: 'mx-2' do %>
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-hamers-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                    class="h-6 w-6 hover:stroke-current hover:text-hamers-yellow-500" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                   </svg>
                 <% end %>
                 <% if @event.open? %>
                   <%= link_to reminder_path(@event), class: 'mx-2' do %>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
-                    </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-blue-500"
+                    fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
+                  </svg>
                   <% end %>
                 <% end %>
                 <% if current_user.admin? %>
                   <%= link_to @event, method: :delete, data: { confirm: 'Weet je het zeker?' }, :class => 'mx-2' do %>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-hamers-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-hamers-red-500"
+                      fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                     </svg>
                   <% end %>
                 <% end %>
@@ -55,7 +66,8 @@
             <div class="flex w-full border-t border-gray-200 mt-2 pt-2">
               <%= form_for @event.signups.new(event_id: @event.id, user_id: current_user.id, status: 1), html: { class: "w-full" } do |f| %>
                 <div class="md:flex w-full md:justify-between md:items-center">
-                  <div class="border w-full md:w-1/2 border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
+                  <div
+                    class="border w-full md:w-1/2 border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
                     <label for="reason" class="block text-xs font-medium text-gray-900">Opmerkingen</label>
                     <%= f.text_field :reason, class: "block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" %>
                   </div>
@@ -68,25 +80,27 @@
               <% end %>
             </div>
             <p class="text-center">
-              Inschrijven kan tot <%= @event.deadline&.strftime('%d-%m-%Y %H:%M') || @event.date.strftime('%d-%m-%Y %H:%M') %>
+              Inschrijven kan tot
+              <%= @event.deadline&.strftime('%d-%m-%Y %H:%M') || @event.date.strftime('%d-%m-%Y %H:%M') %>
             </p>
           <% end %>
 
           <% if @event.location.present? %>
             <div class="border-t border-gray-200 mt-2 pt-2">
               <div class="flex">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                 </svg>
                 <%= @event.location %>
               </div>
               <div class="embed-responsive embed-responsive-4by3">
-                <iframe
-                  class="embed-responsive-item w-full"
-                  height="266"
-                  style="border:0"
-                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCd7hcvDILgo-1XLUCIKwwmy8vVCNLrLK8&q=<%= @event.location %>" allowfullscreen>
+                <iframe class="embed-responsive-item w-full" height="266" style="border:0"
+                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCd7hcvDILgo-1XLUCIKwwmy8vVCNLrLK8&q=<%= @event.location %>"
+                  allowfullscreen>
                 </iframe>
               </div>
             </div>
@@ -95,14 +109,14 @@
       </div>
     </div>
 
-    <div
-      class="border-gray-200 md:flex-shrink-0 md:w-64 md:border-l md:border-gray-200 bg-white">
-      <div class="h-full pl-4 pr-6 md:pl-0">
+    <div class="border-gray-200 md:flex-shrink-0 md:w-64 md:-my-6 md:border-l md:border-gray-200 bg-white">
+      <div class="h-full pl-4 pr-6 md:pt-6 md:pl-0">
         <div class="h-full relative" style="min-height: 12rem;">
           <div class="mt-6 mx-3 gap-y-6 gap-x-4">
             <p class="flex w-full mx-5 justify-between">
               <span class="font-semibold">Aanwezig</span>
-              <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800">
+              <span
+                class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800">
                 <%= @event.signups.where(status: true).count %>
               </span>
             </p>
@@ -120,7 +134,8 @@
 
             <p class="flex w-full mx-5 justify-between">
               <span class="font-semibold">Afwezig</span>
-              <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-red-100 text-red-800">
+              <span
+                class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-red-100 text-red-800">
                 <%= @event.signups.where(status: false).count %>
               </span>
             </p>
@@ -139,7 +154,8 @@
             <% if @event.public? %>
               <p class="flex w-full mx-5 justify-between">
                 <span class="font-semibold">Plebs</span>
-                <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800">
+                <span
+                  class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800">
                   <%= @event.external_signups.count %>
                 </span>
               </p>
@@ -159,7 +175,8 @@
             <% if @unknown.any? %>
               <p class="flex w-full mx-5 justify-between">
                 <span class="font-semibold">Onbekend</span>
-                <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-yellow-100 text-yellow-800">
+                <span
+                  class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-yellow-100 text-yellow-800">
                   <%= @unknown.count %>
                 </span>
               </p>
