--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,10 +38,9 @@
                 <% end %>
                 <% if @event.open? %>
                   <%= link_to reminder_path(@event), class: 'mx-2' do %>
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:stroke-current hover:text-blue-500"
-                    fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
+                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                   </svg>
                   <% end %>
                 <% end %>
