--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -37,7 +37,7 @@
                   </svg>
                 <% end %>
                 <% if @event.open? %>
-                  <%= link_to reminder_path(@event), class: 'mx-2' do %>
+                  <%= link_to reminder_path(@event), class: 'mx-2', data: { confirm: "Je gaat alle mensen op onbekend een mail sturen weet je het zeker?" } do %>
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
