--- a/app/views/usergroups/show.html.erb
+++ b/app/views/usergroups/show.html.erb
@@ -10,7 +10,7 @@
 
   <div class="mt-2 flex items-center text-sm text-gray-400">
     <%= heroicon('users', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
-    <%= @usergroup.users.count %> leden
+    <%= @usergroup.users.count %> <%= pluralize @usergroup.users.count, 'leden', locale: :nl %>
   </div>
 <% end %>
 
