--- a/app/views/users/settings/_form_usergroups.html.erb
+++ b/app/views/users/settings/_form_usergroups.html.erb
@@ -22,7 +22,7 @@
   </div>
 </div>
 <% if current_user.admin? %>
-  <h2 class="text-2xl mt-4 text-center"><%= @user.name %> is NIET lid van:</h2>
+  <h2 class="text-2xl mt-4 text-center"><%= @user.name %> is GEEN lid van:</h2>
   <div class="mt-4">
     <div class="list-container">
       <% @notmember.each_with_index do |group, index| %>
