--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="relative md:my-4 -mx-5 sm:-mx-6 md:-mx-6">
+  <div class="relative md:my-4 -mx-5 sm:-mx-6">
     <div class="absolute inset-0 flex items-center" aria-hidden="true">
       <div class="w-full border-t border-gray-300"></div>
     </div>
