--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,16 @@
         <% if content_for?(:title) %>
           <header class="py-8">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-              <h1 class="text-3xl font-bold text-white">
-                <%= yield :title %>
-              </h1>
               <div class="flex flex-wrap">
-                <div class="flex-auto py-2 mr-2">
-                  <%= render 'shared/breadcrumbs' %>
+                <div class="flex-auto mr-2">
+                  <h1 class="text-3xl font-bold text-white">
+                    <%= yield :title %>
+                  </h1>
+                  <div class="py-2">
+                    <%= render 'shared/breadcrumbs' %>
+                  </div>
                 </div>
-                <div class="flex-grow flex-row-reverse max-w-md">
+                <div class="flex-grow flex-row-reverse max-w-md place-self-center">
                   <%= yield :search %>
                 </div>
               </div>
