--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -17,7 +17,7 @@
           <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm' %>
         </div>
         <div class="px-4 py-3 text-right sm:px-6 sm:w-full">
-          <%= f.submit 'Citeer', class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+          <%= f.submit 'Citeer', class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
         </div>
       <% end %>
     </div>
