--- a/app/views/static_pages/activate_account.html.erb
+++ b/app/views/static_pages/activate_account.html.erb
@@ -10,6 +10,6 @@
       </div>
       <%= f.text_field :invitation_token, autofocus: true, class: 'focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full pl-10 sm:text-sm border-gray-300 rounded-md', placeholder: "Uitnodigingscode" %>
     </div>
-    <%= f.button "Registreer", type: 'submit', class: "w-full justify-center inline-flex items-center px-4 py-2 mt-4 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" %>
+    <%= f.button "Registreer", type: 'submit', class: "w-full justify-center inline-flex items-center px-4 py-2 mt-4 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
   <% end %>
 </main>
