--- a/app/views/blogitems/_form.html.erb
+++ b/app/views/blogitems/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_for(@item) do |f| %>
     <% if @item.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this meeting from being saved:</h2>
+          <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this blogitem from being saved:</h2>
 
           <ul>
             <% @item.errors.full_messages.each do |msg| %>
@@ -13,33 +13,22 @@
     <% end %>
 
     <div class="form-group">
-      <%= f.label :body %><br>
-      <%= f.rich_text_area :actiontext_body, class: 'form-control' %>
-    </div>
-    <div class="form-group">
       <%= f.label :title %><br>
       <%= f.text_field :title, class: 'form-control', required: true, minlength: 2%>
     </div>
+
+    <div class="form-group">
+      <%= f.label :body %><br>
+      <%= f.rich_text_area :body, class: 'form-control' %>
+    </div>
+
     <div class="form-group">
       <%= f.label :public %><br>
       <%= f.check_box :public %>
     </div>
-    <div class="actions">
-      <%= f.submit :Verstuur, class: 'btn btn-primary' %>
+
+    <div class="flex justify-center mt-5">
+      <%= f.submit "Opslaan", class: "inline-flex items-center px-6 py-3 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
     </div>
-<% end %>
-</div>
-<div class="photos">
-  <% @item.blogphotos.each do |p| %>
-    <%= image_tag p.image.url(:thumb) %>
-    <%= link_to 'x', "/blog/#{@item.id}/#{p.id}", method: :destroy, confirmation: "sure?" %>
   <% end %>
-</div>
-<div class="form-group">
-<%= form_for @photo, url: @item, html: { multipart: true } do |form| %>
-  <%= form.file_field :image %>
-  <%= form.text_field :description, placeholder: "Beschrijving" %>
-  <%= form.hidden_field :blogitem_id, value: @item.id %>
-  <%= form.submit :Upload %>
-<% end %>
 </div>
