Create shared view for default pagination

--- a/app/views/beers/_table.html.erb
+++ b/app/views/beers/_table.html.erb
@@ -62,7 +62,7 @@
             </tbody>
           </table>
 
-          <%= render 'shared/pagination' %>
+          <%= render 'shared/pagination/table' %>
 
         </div>
       </div>
