--- a/app/views/shared/pagination/_default.html.erb
+++ b/app/views/shared/pagination/_default.html.erb
@@ -15,7 +15,7 @@
         <%== item  %>
       </a>
     <% elsif item.is_a?(String) %>
-      <span class="z-10 bg-hamers-red-50 border-hamers-red-500 text-hamers-red-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+      <span class="z-10 bg-gray-100 border-gray-400 text-gray-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
         <%= item %>
       </span>
     <% elsif item == :gap %>
