--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -2,5 +2,5 @@
   <ol class="quotes">
     <%= render @quotes %>
   </ol>
-  <%== pagy_nav(@pagy) %>
+  <%= render 'shared/pagination/default' %>
 <% end %>
