--- a/app/frontend/packs/application.css
+++ b/app/frontend/packs/application.css
@@ -5,3 +5,8 @@
 @import 'tailwindcss/utilities';
 @import 'trix/dist/trix';
 @import 'flatpickr/dist/flatpickr';
+
+trix-editor.form-control {
+  min-height: 300px;
+  height: auto;
+}
