--- a/app/views/external_signups/_form.html.erb
+++ b/app/views/external_signups/_form.html.erb
@@ -1,9 +1,7 @@
 <div class="mx-auto w-full max-w-sm lg:w-96">
-  <div>
-    <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
-      Aanmelden
-    </h2>
-  </div>
+  <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
+    Aanmelden
+  </h2>
 
   <% if @external_signup.errors.any? %>
     <div id="error_explanation">
@@ -16,44 +14,42 @@
   <% end %>
 
   <div class="mt-8">
-    <div class="mt-6">
-      <%= form_for @external_signup, url: create_external_signup_event_path(invitation_code: @invitation_code), html: {class: "space-y-6"} do |f| %>
-        <div>
-          <label for="first_name" class="block text-sm font-medium text-gray-700">
-            Voornaam
-          </label>
-          <div class="mt-1">
-          <%= f.text_field :first_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
-        </div>
+    <%= form_for @external_signup, url: create_external_signup_event_path(invitation_code: @invitation_code), html: {class: "space-y-6"} do |f| %>
+      <div>
+        <label for="first_name" class="block text-sm font-medium text-gray-700">
+          Voornaam
+        </label>
+        <div class="mt-1">
+        <%= f.text_field :first_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+      </div>
 
-        <div>
-          <label for="last_name" class="block text-sm font-medium text-gray-700">
-            Achternaam
-          </label>
-          <div class="mt-1">
-          <%= f.text_field :last_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
-        </div>
+      <div>
+        <label for="last_name" class="block text-sm font-medium text-gray-700">
+          Achternaam
+        </label>
+        <div class="mt-1">
+        <%= f.text_field :last_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+      </div>
 
-        <div>
-          <label for="email" class="block text-sm font-medium text-gray-700">
-            Email adres
-          </label>
-          <div class="mt-1">
-          <%= f.email_field :email, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
-        </div>
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-700">
+          Email adres
+        </label>
+        <div class="mt-1">
+        <%= f.email_field :email, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+      </div>
 
-        <div>
-          <label for="note" class="block text-sm font-medium text-gray-700">
-            Opmerkingen
-          </label>
-          <div class="mt-1">
-          <%= f.text_area :note, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
-        </div>
+      <div>
+        <label for="note" class="block text-sm font-medium text-gray-700">
+          Opmerkingen
+        </label>
+        <div class="mt-1">
+        <%= f.text_area :note, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+      </div>
 
-        <div class="pt-4">
-          <%= f.submit "Aanmelden", class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-        </div>
-      <% end %>
-    </div>
+      <div class="pt-4">
+        <%= f.submit "Aanmelden", class: submit_classes %>
+      </div>
+    <% end %>
   </div>
 </div>
