--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,7 +13,7 @@
 <div class="flex-grow w-full max-w-7md mx-auto lg:flex">
   <div class="flex-1 min-w-0 bg-white md:flex">
     <div
-      class="border-b border-gray-200 md:border-b-0 md:flex-shrink-0 md:w-64 md:-my-6 md:border-r md:border-gray-200 bg-white">
+      class="border-b border-gray-200 pb-4 md:border-b-0 md:flex-shrink-0 md:w-64 md:-my-6 md:border-r md:border-gray-200 bg-white">
       <div class="h-full pl-4 pr-6 md:py-6 md:pl-0">
         <div class="h-full relative" style="min-height: 12rem;">
           <div class="mt-6 grid grid-cols-3 gap-y-6 gap-x-4">
@@ -23,7 +23,7 @@
                 Titel
               </label>
               <div class="mt-1">
-                <%= f.text_field :title, class: 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' %>
+                <%= f.text_field :title, class: input_classes %>
               </div>
             </div>
 
@@ -32,7 +32,7 @@
                 Locatie
               </label>
               <div class="mt-1">
-                <%= f.text_field :location, class: 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' %>
+                <%= f.text_field :location, class: input_classes %>
               </div>
             </div>
 
@@ -42,7 +42,7 @@
               </label>
               <div class="mt-1">
                 <%= f.text_field :date,
-                      class: 'hadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md',
+                      class: input_classes,
                       data: {
                         controller: "flatpickr",
                         flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
@@ -59,7 +59,7 @@
               </label>
               <div class="mt-1">
                 <%= f.text_field :end_time,
-                      class: 'hadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md',
+                      class: input_classes,
                       data: {
                         controller: "flatpickr",
                         flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
@@ -76,7 +76,7 @@
               </label>
               <div class="mt-1">
                 <%= f.text_field :deadline,
-                      class: 'hadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md',
+                      class: input_classes,
                       data: {
                         controller: "flatpickr",
                         flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
@@ -91,12 +91,12 @@
               <label class="block text-sm font-medium text-gray-700">
                 Groep (optioneel)
               </label>
-              <%= f.select :usergroup_id, Usergroup.all.collect { |x| [x.name, x.id] }, { include_blank: true }, { class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" } %>
+              <%= f.select :usergroup_id, Usergroup.all.collect { |x| [x.name, x.id] }, { include_blank: true }, { class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md" } %>
             </div>
 
             <div class="flex items-start col-span-3 md:justify-between">
               <div class="flex items-center h-5">
-                <%= f.check_box :public, { checked: @event.invitation_code?, class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" } %>
+                <%= f.check_box :public, { checked: @event.invitation_code?, class: "focus:ring-hamers-red-500 h-4 w-4 text-hamers-red-600 border-gray-300 rounded" } %>
               </div>
               <div class="ml-3 text-sm">
                 <label class="font-medium text-gray-700">Plebs</label>
@@ -111,10 +111,10 @@
     <div class="bg-white lg:min-w-0 lg:flex-1">
       <div class="h-full py-6 px-4 sm:px-6 lg:pl-8">
         <div class="relative h-full">
-          <%= f.rich_text_area :description, class: 'form-control higher form-input', placeholder: 'Wat gaan we doen?' %>
+          <%= f.rich_text_area :description, class: 'form-control', placeholder: 'Wat gaan we doen?' %>
 
           <div class="flex justify-center mt-5">
-            <%= f.submit "Opslaan", class: "inline-flex items-center px-6 py-3 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+            <%= f.submit "Opslaan", class: submit_classes %>
           </div>
         </div>
       </div>
