--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -1,25 +1,19 @@
-<div class="bg-white overflow-hidden md:shadow md:rounded-lg">
-  <div class="md:p-5">
-    <h2 class="text-indigo-400 text-xl font-extrabold my-2 md:mx-5">Quote</h2>
-    <div class="flex items-center">
-      <%= form_for @quote, html: { class: "w-full" } do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <div>
-          <div class="mt-1">
-            <%= f.text_area :text,
-                placeholder: 'Wat zei die lul?',
-                rows: 2,
-                class: 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md' %>
-          </div>
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
-          <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm' %>
-        </div>
-        <div class="px-4 py-3 text-right sm:px-6 sm:w-full">
-          <%= f.submit 'Citeer', class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
-        </div>
-      <% end %>
-    </div>
+<div class="p-4 bg-white overflow-hidden md:shadow md:rounded-lg">
+  <h2 class="text-gray-900 text-xl font-bold mb-2">Quote</h2>
+  <div class="flex items-center">
+    <%= form_for @quote, html: { class: "w-full" } do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      <%= f.text_area :text,
+                      placeholder: 'Wat zei die lul?',
+                      rows: 2,
+                      class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 mt-2 block w-full sm:text-sm border border-gray-300 rounded-md' %>
+      <div class="col-span-6 sm:col-span-3">
+        <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
+        <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm' %>
+      </div>
+      <div class="py-2">
+        <%= f.submit 'Citeer', class: "w-full inline-flex items-center justify-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white border border-gray-300 text-gray-700 bg-white hover:bg-gray-50" %>
+      </div>
+    <% end %>
   </div>
 </div>
