--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,43 +1,41 @@
-<div class="bg-white overflow-hidden md:shadow md:rounded-lg hidden md:block">
-  <div class="px-5 h-full">
-    <h2 class="text-indigo-400 text-xl font-extrabold my-2 mx-5">Biertje van de pageload</h2>
-    <div class="flex justify-center h-full">
-      <% if @random_beer %>
-
+<div class="px-4 pt-4 bg-white overflow-hidden md:shadow md:rounded-lg hidden md:block h-full">
+  <h2 class="text-gray-900 text-xl font-bold text-gray-900 mb-2">Biertje van de pageload</h2>
+  <div class="flex justify-center h-full">
+    <% if @random_beer %>
       <div class="flex-shrink-0">
-          <% if @random_beer.picture.present? %>
-            <%= image_tag @random_beer.picture, class: "h-40 rounded" %>
-          <% else %>
-            <%= image_tag 'beer_splash.jpg', class: "h-40 rounded" %>
-          <% end %>
+        <% if @random_beer.picture.present? %>
+          <%= image_tag @random_beer.picture, class: "h-40 rounded" %>
+        <% else %>
+          <%= image_tag 'beer_splash.jpg', class: "h-40 rounded" %>
+        <% end %>
       </div>
       <div class="ml-5 w-0 flex-1 items-center h-full">
         <%= link_to @random_beer, class: "flex-shrink-0 group block h-full" do %>
-        <div class="flex h-full">
-          <div class="ml-3 flex-col justify-between h-full">
-            <div class="col-span-1 h-1/3 flex flex-col justify-between">
-            <p class="align-top font-medium text-hamers-red-500 group-hover:text-gray-900">
-              <%= @random_beer.name %>
-            </p>
-            </div>
-            <div class="col-span-1 flex flex-col justify-between">
-              <p class="object-bottom text-xl font-medium text-hamers-yellow-600 group-hover:text-gray-700">
-                <%= @random_beer.cijfer? %>
-              </p>
-              <p class="object-bottom text-xs font-medium text-gray-500 group-hover:text-gray-700">
-                <%= pluralize(@random_beer.reviews.count, 'review') %>
-              </p>
+          <div class="flex h-full">
+            <div class="flex-col justify-between h-full">
+              <div class="col-span-1 h-1/3 flex flex-col justify-between">
+                <p class="align-top font-medium text-hamers-red-500 group-hover:text-gray-900">
+                  <%= @random_beer.name %>
+                </p>
+              </div>
+              <div class="col-span-1 flex flex-col justify-between">
+                <p class="object-bottom text-xl font-medium text-hamers-yellow-600 group-hover:text-gray-700">
+                  <%= @random_beer.cijfer? %>
+                </p>
+                <p class="object-bottom text-xs font-medium text-gray-500 group-hover:text-gray-700">
+                  <%= pluralize(@random_beer.reviews.count, 'review') %>
+                </p>
+              </div>
             </div>
           </div>
-        </div>
         <% end %>
       </div>
-      <% else %>
+    <% else %>
       <div class="text-center">
         <svg class="mx-auto h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-          aria-hidden="true">
+             aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
         <h3 class="mt-2 text-sm font-medium text-gray-900">Er zijn nog geen biertjes :(</h3>
         <p class="mt-1 text-sm text-gray-500">
@@ -45,19 +43,18 @@
         </p>
         <div class="mt-6">
           <%= button_to new_beer_path, method: :get,
-              class: "inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" do %>
-          <!-- Heroicon name: solid/plus -->
-          <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-            aria-hidden="true">
-            <path fill-rule="evenodd"
-              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
-              clip-rule="evenodd" />
-          </svg>
-          Nieuw biertje
+                        class: "inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" do %>
+            <!-- Heroicon name: solid/plus -->
+            <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                 aria-hidden="true">
+              <path fill-rule="evenodd"
+                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
+                    clip-rule="evenodd"/>
+            </svg>
+            Nieuw biertje
           <% end %>
         </div>
       </div>
-      <% end %>
-    </div>
+    <% end %>
   </div>
 </div>
