--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if @pagy.page == 1 %>
-  <div class="max-w-6xl mx-auto px-2 mt-8">
+  <div class="max-w-6xl mx-auto">
     <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
       <%= render 'shared/user_info' %>
       <%= render 'shared/next_event' %>
@@ -11,7 +11,7 @@
   </div>
 <% end %>
 
-<div class="relative md:my-4 -mx-5 sm:-mx-6">
+<div class="relative my-4 -mx-5 sm:-mx-6">
   <div class="absolute inset-0 flex items-center" aria-hidden="true">
     <div class="w-full border-t border-gray-300"></div>
   </div>
