--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,27 +2,19 @@
   Bieren
 <% end %>
 
-<div class="row">
-  <% if current_user&.active? %>
-    <%= link_to 'Voeg bier toe', new_beer_path, :class => 'btn btn-block btn-primary' %>
+<% content_for :search do %>
+  <%= form_tag beers_path, class: "flex shadow-sm rounded-md", method: :get do %>
+    <%= text_field_tag :search, @sp,
+                       placeholder: 'Vind hier, je bier.',
+                       class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full text-sm border-gray-300 rounded-l-md' %>
+    <%= submit_tag "Zoek", class: "-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500" %>
   <% end %>
+<% end %>
 
-  <div class="col-md-6">
-    <div class="pagination">
-      <div class="pagination">
-        <%= form_tag beers_path, class: "form-horizontal", method: :get do %>
-          <div class="input-group" id="adv-search">
-            <%= text_field_tag :search, @sp, class: 'form-control', placeholder: 'Vind hier, je bier' %>
-            <div class="input-group-btn">
-              <div class="btn-group" role="group">
-                <%= submit_tag "Zoek", class: "btn btn-primary" %>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
+<% if @pagy.page == 1 %>
+  <div class="flex flex-row-reverse">
+    <%= link_to 'Voeg bier toe', new_beer_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500" %>
   </div>
-</div>
+<% end %>
 
 <%= render 'table' %>
